Update alignleft/alignright targeting to be more specific, avoiding elements in groups, cover blocks, columns, and so on

--- a/style.css
+++ b/style.css
@@ -2901,7 +2901,7 @@ h2.entry-title {
 }
 
 
-/* Block: Shared Widget Styles ----------------- */
+/* Block: Shared Widget Styles --------------- */
 
 .wp-block-archives,
 .wp-block-categories,
@@ -4399,11 +4399,15 @@ a.to-the-top > * {
 
 	/* ALIGNMENT CLASSES */
 
-	.entry-content .alignleft {
+	.entry-content > .alignleft,
+	.entry-content > p .alignleft,
+	.entry-content > .wp-block-image .alignleft {
 		margin-left: calc(( 100vw - 58rem - 8rem ) / -2);
 	}
 
-	.entry-content .alignright {
+	.entry-content > .alignright,
+	.entry-content > p .alignright,
+	.entry-content > .wp-block-image .alignright {
 		margin-right: calc(( 100vw - 58rem - 8rem ) / -2);
 	}
 
@@ -5732,11 +5736,15 @@ a.to-the-top > * {
 
 	/* ALIGNMENT CLASSES */
 
-	.entry-content .alignleft {
+	.entry-content > .alignleft,
+	.entry-content > p .alignleft,
+	.entry-content > .wp-block-image .alignleft {
 		margin-left: -31rem;
 	}
 
-	.entry-content .alignright {
+	.entry-content > .alignright,
+	.entry-content > p .alignright,
+	.entry-content > .wp-block-image .alignright {
 		margin-right: -31rem;
 	}
 
